Fixes search block alignment on Rivington

--- a/rivington/style-rtl.css
+++ b/rivington/style-rtl.css
@@ -4650,3 +4650,19 @@ p:not(.site-title) a:hover {
 		display: contents;
 	}
 }
+
+/**
+ * Search block
+ */
+.wp-block-search.wp-block-search__button-inside .wp-block-search__inside-wrapper {
+	border-radius: 3px;
+}
+
+.wp-block-search.wp-block-search__button-inside .wp-block-search__input {
+	background: transparent;
+}
+
+.wp-block-search .wp-block-search__input {
+	margin-left: calc( .1 * 16px);
+	border-radius: 3px;
+}
