--- a/rivington/style.css
+++ b/rivington/style.css
@@ -4679,3 +4679,19 @@ p:not(.site-title) a:hover {
 		display: contents;
 	}
 }
+
+/**
+ * Search block
+ */
+.wp-block-search.wp-block-search__button-inside .wp-block-search__inside-wrapper {
+	border-radius: 3px;
+}
+
+.wp-block-search.wp-block-search__button-inside .wp-block-search__input {
+	background: transparent;
+}
+
+.wp-block-search .wp-block-search__input {
+	margin-right: calc( .1 * 16px);
+	border-radius: 3px;
+}
